# FlashVM

./: .gitattributes  .gitignore  Cargo.toml  README.md  default.nix  flake.nix  package.nix  pyproject.toml
docker/: Dockerfile.python-basic
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: api.mdx  changelog.mdx  contributing.mdx  examples.mdx  index.mdx  install.mdx  internals.mdx  license.mdx  quickstart.mdx  troubleshooting.mdx
docs/src/content/docs/guides/: isolation.mdx
docs/src/content/docs/reference/: host-tools.mdx  result.mdx  transports.mdx
docs/src/content/docs/usage/: artifacts.mdx  image.mdx
examples/: basic_example.py  process_csv_example.py
flashvm/data/oci/: index.json  oci-layout
python/flashvm/: __init__.py
src/: config.rs  error.rs  image_resolver.rs  lib.rs  types.rs  vm_runner.rs  wheel_resources.rs
src/vmm/: boot.rs  devices.rs  event_loop.rs  kvm_ctx.rs  memory.rs  mod.rs  platform_aarch64.rs  platform_x86.rs  run.rs
tests/: __init__.py  conftest.py
tests/benchmark/: test_performance.py
tests/integration/: test_complex_scenarios.py
tests/unit/: test_basic_api.py  test_edge_cases.py  test_pip_prepare_image.py  test_wheel_resources.py
