[package]
name = "flashvm"
version = "0.1.3"
edition = "2021"
description = "Run Python code inside libkrun microVMs, with an embedded offline OCI image"
license = "MIT"
repository = "https://github.com/fullzer4/flashvm"
homepage = "https://github.com/fullzer4/flashvm"
documentation = "https://github.com/fullzer4/flashvm#readme"
include = [
    "Cargo.toml",
    "src/**",
    "pyproject.toml",
    "README.md",
    "flashvm/**",
    "examples/**",
    "docker/**",
]

[lib]
name = "flashvm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }
sha256 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"

[profile.release]
codegen-units = 1
lto = "thin"
