[package]
name = "flashvm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Python-first microVM runner using rust-vmm, for running OCI-prepared Python code in isolated VMs"


[lib]
name = "flashvm_native"
crate-type = ["cdylib"]


[features]
x86_64 = ["acpi_tables"]
aarch64 = ["vm-fdt"]


[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


kvm-ioctls = "*" # TODO: fixar versões
kvm-bindings = "*"
vm-memory = { version = "*", features = ["backend-mmap"] }
linux-loader = "*"
vm-superio = "*"
vmm-sys-util = "*"

# These rust-vmm crates are not published to crates.io; use git and keep them optional.
# They are enabled via the corresponding arch features above.
acpi_tables = { git = "https://github.com/rust-vmm/acpi_tables", optional = true }
vm-fdt = { git = "https://github.com/rust-vmm/vm-fdt", optional = true }

# Virtio crates are a workspace; depend on specific crates by git + package name
virtio-device = { git = "https://github.com/rust-vmm/vm-virtio", package = "virtio-device" }
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio", package = "virtio-queue" }
# virtio-blk = { git = "https://github.com/rust-vmm/vm-virtio", package = "virtio-blk" }