[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "flashvm"
version = "0.1.0"
description = "Python-first microVM runner (rust-vmm + PyO3) to run OCI-prepared Python code in isolated VMs"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0 OR BSD-3-Clause" }
authors = [{ name = "fullzer4", email = "gabrielpelizzaro@gmail.com" }]
keywords = ["rust", "python", "pyo3", "kvm", "vm", "rust-vmm", "microvm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: BSD License",
]

[tool.maturin]
python-source = "python"
python-packages = ["flashvm"]

bindings = "pyo3"
compatibility = "manylinux_2_28"
strip = true

include = [
  { path = "README.md", format = ["sdist", "wheel"] },
  { path = "LICENSE*", format = ["sdist", "wheel"] },
  { path = "python/flashvm/assets/**", format = ["sdist", "wheel"] }
]

[project.urls]
Homepage = "https://example.com/flashvm"
Source = "https://example.com/flashvm/repo"
